# mathru

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  katex.html  rustfmt.toml
benches/: lib.rs
benches/analysis/: mod.rs  vector_bench.rs
benches/analysis/ode/: dormandprince.rs  mod.rs  ode.rs  ode_problems.rs
examples/: dec_cholesky.rs  dec_hessenberg.rs  dec_lu.rs  dec_qr.rs  erf.rs  fit_lm.rs  gamma.rs  normal_distribution.rs  ode_dormandprince.rs  ode_implicit_euler.rs  solve.rs  sqrt.rs  t_test_one_sample_two_tailed.rs
src/: lib.rs
src/algebra/: mod.rs
src/algebra/abstr/: abeliangroup.rs  abs_diff_eq.rs  bound.rs  cast.rs  complex.rs  field.rs  group.rs  identity.rs  integer.rs  loop_.rs  magma.rs  mod.rs  monoid.rs  natural.rs  operator.rs  polynomial.rs  quasigroup.rs  real.rs  relative_eq.rs  ring.rs  scalar.rs  semigroup.rs  semiring.rs  sign.rs
src/algebra/linear/: blas.rs  lapack.rs  mod.rs
src/analysis/: function.rs  hessian.rs  jacobian.rs  mod.rs  newton_raphson.rs
src/analysis/differential_equation/: mod.rs
src/analysis/integral/: mod.rs
src/elementary/: exponential.rs  hyperbolic.rs  mod.rs  power.rs  trigonometry.rs
src/optimization/: conjugategradient.rs  gaussnewton.rs  gradient.rs  levenbergmarquardt.rs  mod.rs  newton.rs  nonlinearcg.rs  optim.rs  optimresult.rs
src/special/: beta.rs  error.rs  gamma.rs  hypergeometric.rs  mod.rs
src/statistics/: combins.rs  mod.rs
src/statistics/distrib/: bernoulli.rs  beta.rs  binomial.rs  chisquare.rs  distrib.rs  exponential.rs  gamma.rs  log_normal.rs  mod.rs  multinomial.rs  normal.rs  poisson.rs  raisedcosine.rs  t.rs  uniform.rs
src/statistics/test/: chisquare.rs  g.rs  mod.rs  t.rs  test.rs
tests/: lib.rs
tests/algebra/: mod.rs
tests/algebra/abstr/: complex.rs  identity.rs  magma.rs  mod.rs  monoid.rs  polynomial.rs  semigroup.rs
tests/analysis/: mod.rs  newton_raphson.rs
tests/elementary/: exponential.rs  hyperbolic.rs  mod.rs  power.rs  trigonometry.rs
tests/optimization/: conjugategradient.rs  gaussnewton.rs  gradient.rs  levenbergmarquardt.rs  mod.rs  newton.rs  problem.rs
tests/special/: beta.rs  error.rs  gamma.rs  hypergeometrical.rs  mod.rs
tests/statistics/: combins.rs  mod.rs
(+218 files in other folders)
